welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:2: error: illegal start of simple pattern
	var int i=0
                 ^Program:4: error: '=' expected but ';' found.
		while(vuBiscuit()==0)
^