welcome.lessons.welcome.methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = {
	var int i=0
	
		while(vuBiscuit()==0)
		{
			avance()
			i=i+1
		}
	return i
	
}
